--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "description": "Estudando clean archtecture - Rodrigo Manguinho",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "lint-staged": {
-    "*.js": ["standard --fix", "git add"]
+    "*.js": [
+      "standard --fix",
+      "git add"
+    ]
   },
   "husky": {
     "hooks": {
@@ -27,6 +30,7 @@
   "homepage": "https://github.com/jademirf/clean-node-api#readme",
   "devDependencies": {
     "husky": "^7.0.4",
+    "jest": "^27.4.7",
     "lint-staged": "^12.3.3",
     "standard": "^16.0.4"
   }
