add jest to project

--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
   "description": "Estudando clean archtecture - Rodrigo Manguinho",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
-  },
-  "lint-staged": {
-    "*.js": [
-      "standard --fix",
-      "git add"
-    ]
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
+    "test": "jest",
+    "lint-staged": {
+      "*.js": [
+        "standard --fix",
+        "git add"
+      ]
+    },
+    "husky": {
+      "hooks": {
+        "pre-commit": "lint-staged"
+      }
     }
   },
   "repository": {
