--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   },
   "lint-staged": {
     "*.js": [
-      "standard --fix",
-      "git add"
+      "standard --fix"
     ]
   },
   "husky": {
