ensure loginRouter returns 400 if no email is provided

--- a/package.json
+++ b/package.json
@@ -11,10 +11,8 @@
       "standard"
     ]
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
+  "standard": {
+    "env": ["jest"]
   },
   "repository": {
     "type": "git",
