--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
   "standard": {
     "env": ["jest"]
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jademirf/clean-node-api.git"
