--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Estudando clean archtecture - Rodrigo Manguinho",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest --watchAll",
     "test:staged": "jest",
     "prepare": "husky install"
   },
